force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/DESKSCMT__Desk_Attachment_Migration__c.object-meta.xml
<CustomObject>
    <description>Temporary Object for Desk Attachment information</description>
    <label>Desk Attachment Migration</label>
    <nameField>
        <displayFormat>DAM-{0000000}</displayFormat>
        <label>Desk Attachment Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Attachment Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>