force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__Desk_Subject__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Subject__c</fullName>
    <label>Desk Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>