force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__File_Name__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>