force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__File_Type__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__File_Type__c</fullName>
    <label>File Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>