force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__No_Of_Attachments__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__No_Of_Attachments__c</fullName>
    <label>No Of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>