force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__Object__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Article</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>