force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Salesforce_Id__c</fullName>
    <label>Salesforce Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>