force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__Size__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>