force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__Type__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inline</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>