force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/fields/DESKSCMT__Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>