force-app/main/default/objects/DESKSCMT__Desk_Attachment_Migration__c/listViews/DESKSCMT__Failed_Attachment_Migrations.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Attachment_Migrations</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Desk_Attachment_Id__c</columns>
    <columns>DESKSCMT__Desk_URL__c</columns>
    <columns>DESKSCMT__Error__c</columns>
    <columns>DESKSCMT__File_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Failed Attachments</label>
</ListView>